Fixed overflow at card description

--- a/src/frontend/src/style/applies.css
+++ b/src/frontend/src/style/applies.css
@@ -311,10 +311,10 @@
     @apply hover:text-accent-foreground hover:transition-all;
   }
   .generic-node-desc {
-    @apply h-full w-full  text-foreground;
+    @apply h-full w-full text-foreground;
   }
   .generic-node-desc-text {
-    @apply w-full px-5 pb-3 text-sm text-muted-foreground;
+    @apply w-full px-5 mb-4 text-sm text-muted-foreground;
   }
 
   .alert-icon {
